# lms_rest_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
lessons/: admin.py  models.py  paginators.py  permissions.py  services.py  tasks.py  tests.py  urls.py  validators.py
lessons/fixtures/: lessons_data.json
lessons/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_remove_lesson_course_course_lessons.py  0004_course_owner_lesson_owner.py  0005_alter_course_options_alter_lesson_options_subscribe.py  0006_rename_subscribe_subscription.py  0007_lesson_updated_at.py  0008_course_updated_at.py
lessons/serializers/: __init__.py  course.py  lesson.py  subscription.py
lessons/views/: __init__.py  course.py  lesson.py  subscription.py
payments/: models.py  serializers.py  services.py  urls.py  validators.py  views.py
payments/management/commands/: fill_payments.py
payments/migrations/: 0001_initial.py  0002_alter_payment_type.py  0003_alter_payment_type.py  0004_remove_payment_type_payment_method.py  0005_payment_is_paid.py  0006_paymentsession.py  0007_alter_paymentsession_payment.py  0008_alter_paymentsession_payment.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: fill_users.py  load_groups.py
users/migrations/: 0001_initial.py  0002_alter_user_city.py
