[tool.poetry]
name = "lms-rest-api"
version = "0.1.0"
description = ""
authors = ["Maxim Donchuk <m.donchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
ipython = "^8.18.1"
django-filter = "^23.5"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
setuptools = "^69.0.2"
stripe = "^7.9.0"
celery = "^5.3.6"
redis = "^5.0.1"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
